# openwrt-hc5x61

./: .gitignore  Makefile  README.md  config-hiwifi-hc5661a  config-hiwifi-hc5761  config-hiwifi-hc5861  hiwifi-hc5761.patch
ImageBuilder/: .gitignore  Makefile  config.ralink  hc5761-basefiles.patch  hc5761-imagebuild.patch  hiwifi-hc5761.patch  opkg.conf  repo-base.conf  repo-rssnsj.conf
ImageBuilder-MT7628/: Makefile  opkg.conf  repo-base.conf
branches/hiwifi-r36145/: Makefile
branches/hiwifi-v1-r38140/tw150v1/: Makefile
branches/openwrt-h5761-bb/: config-hiwifi-hc5761
branches/openwrt-hc5761/: Makefile  README.txt  config-hiwifi-hc5761  config-openwrt-mt7620a  hiwifi-hc5761.patch
branches/openwrt-hc5761-bb/: Makefile  config-hiwifi-hc5761  hiwifi-hc5761.patch
branches/openwrt-hc5761-bb/recovery.bin/: Makefile
branches/openwrt-hc5761/files/package/rt2860v2/files/rt2860v2/ap/: ap.c
branches/openwrt-hc5761/files/package/rt2860v2/files/rt2860v2/chips/: rt3352.c
branches/openwrt-hc5761/files/package/rt2860v2/files/rt2860v2/common/: cmm_info.c  cmm_video.c  cmm_wpa.c  crypt_biginteger.c  igmp_snoop.c  p2p_disc_mng.c  p2p_nego_mng.c  rt_led.c  rtmp_init_inf.c
branches/openwrt-hc5761/files/package/rt2860v2/files/rt2860v2/include/: ags.h  client_wds.h  drs_extr.h  link_list.h  rtmp.h  rtmp_chip.h  rtmp_comm.h  rtmp_osabl.h  video.h
branches/openwrt-hc5761/files/package/rt2860v2/files/rt2860v2/rate_ctrl/: alg_legacy.c  ra_ctrl.c
branches/openwrt-hc5761/files/package/rt2860v2/files/rt2860v2_ap/: Kconfig  modules.builtin  rt2860v2_ap.mod.c
branches/openwrt-hc5761/recovery.bin/: Makefile
branches/openwrt-hc6361/: Makefile  config-hiwifi-hc6361  hiwifi-hc5761.patch
branches/openwrt-hiwifi2/: Makefile  README.txt  config-openwrt-ar9xxx-ap83  config-openwrt-mt7620a
branches/openwrt-hiwifi2/files/package/rt2860v2/: Makefile  config.in
branches/openwrt-hiwifi2/files/package/rt2860v2/files/: rt2860v2.sh
branches/openwrt-hiwifi2/files/package/rt2860v2/files/rt2860v2/ap/: ap_apcli.c  ap_autoChSel.c  ap_cfg.c  ap_data.c  ap_mbss.c
branches/openwrt-hiwifi2/files/package/rt2860v2/files/rt2860v2/chips/: rt3883.c  rtmp_chip.c
branches/openwrt-hiwifi2/files/package/rt2860v2/files/rt2860v2/common/: action.c  ba_action.c  cmm_asic.c  cmm_data_pci.c  cmm_mac_pci.c  cmm_profile.c  ee_flash.c  mlme.c  p2p_action.c  p2p_ctrl.c  p2p_table.c  rtmp_init.c  uapsd.c
branches/openwrt-hiwifi2/files/package/rt2860v2/files/rt2860v2/include/: igmp_snoop.h  rt_cal.h  rt_os_net.h  rt_os_util.h
branches/openwrt-hiwifi2/files/package/rt2860v2/files/rt2860v2/sta/: tdls_uapsd.c
branches/openwrt-hiwifi2/files/package/rt2860v2/files/rt2860v2/tools/: bin2h
branches/openwrt-hiwifi2/files/package/rt2860v2/files/rt2860v2_ap/: Makefile  x8_mtd2.h
branches/openwrt-hiwifi2/files/package/rt2860v2/files/rt2860v2_sta/: Kconfig  Makefile
branches/openwrt-hiwifi2/firmware-builder/: tw150v1-buildfw.sh
branches/openwrt-hiwifi2/hiwifi2/: Makefile  build-hiwifi2.sh  hc5x61-root.sh
branches/openwrt-hiwifi2/mach-tw150v1/: mach-ap83.c
branches/openwrt-wr720n/: build-dreambox.sh  build-openwrt.sh  config-openwrt-ar9xxx-wr720n
branches/openwrt-wr720n/firmware-builder/squashfs-tools/: mksquashfs.c
patches/: 01-hiwifi-hc5761.patch  01-hiwifi-hc5x61.patch  10-odhcpd-nodnsv6.patch  11-enable-dnsmasq-ipset.patch  12-disable-pdnsd.patch  19-luci-wifi-mtk.patch
recovery.bin/: Makefile
tools/firmware-tools/: Makefile  openwrt-repack.sh
tools/firmware-tools/src/: Makefile
tools/firmware-tools/src/hexof/: Makefile  hexof.c
tools/firmware-tools/src/opkg/: .gitignore  AUTHORS  CONTRIBUTORS  ChangeLog  ChangeLog.ipkg  INSTALL  Makefile.am  README  TODO  autogen.sh  configure.ac  libopkg.pc.in
tools/firmware-tools/src/opkg/intercept/: depmod  ldconfig  update-modules
tools/firmware-tools/src/opkg/libbb/: Makefile.am  all_read.c  copy_file.c  gz_open.c  last_char_is.c  libbb.h  make_directory.c  parse_mode.c  safe_strncpy.c  unarchive.c  unzip.c  xfuncs.c  xreadlink.c
tools/firmware-tools/src/opkg/libopkg/: Makefile.am  active_list.c  active_list.h  cksum_list.c  cksum_list.h  conffile.c  conffile.h  conffile_list.c  conffile_list.h  file_util.c  file_util.h  hash_table.c  hash_table.h  list.h  md5.c  md5.h  nv_pair.c  nv_pair.h  nv_pair_list.c  nv_pair_list.h  opkg.c  opkg.h  opkg_cmd.c  opkg_cmd.h  opkg_conf.c  opkg_conf.h  opkg_configure.c  opkg_configure.h  opkg_defines.h  opkg_download.c  opkg_download.h  opkg_install.c  opkg_install.h  opkg_message.c  opkg_message.h  opkg_pathfinder.c  opkg_pathfinder.h  opkg_remove.c  opkg_remove.h  opkg_upgrade.c  (+39 more)
tools/firmware-tools/src/opkg/man/: Makefile.am  opkg-cl.1.in  opkg-key.1.in
tools/firmware-tools/src/opkg/shave/: shave.m4
tools/firmware-tools/src/opkg/src/: Makefile.am  opkg-cl.c
tools/firmware-tools/src/opkg/tests/: Makefile.am  libopkg_test.c  opkg_active_list_test.c  opkg_extract_test.c  opkg_hash_test.c
tools/firmware-tools/src/opkg/tests/regress/: Makefile  cfg.py  filehash.py  issue26.py  issue31.py  issue45.py  issue46.py  issue50.py  issue51.py  issue55.py  issue58.py  issue72.py  opk.py  opkgcl.py
tools/firmware-tools/src/opkg/utils/: Makefile.am  opkg-key  update-alternatives.in
tools/vanillass/base-files/etc/: ss-fanglist.txt
tools/vanillass/base-files/etc/init.d/: vanillass
tools/vanillass/base-files/usr/lib/vanillass/: ss-redir
trunk/: Makefile  build-dreambox.sh  build-openwrt.sh  config-ar9xxx-mach-ap83  config-dreambox-ar9xxx-ap83  config-hiwifi-hc5761  config-openwrt-ar71xx-ap83  config-openwrt-ar9xxx-ap83  hiwifi-hc5761.patch
trunk/files/tools/firmware-utils/src/: mktplinkfw.c
trunk/firmware-builder/: firmware-root.sh  tw150v1-buildfw.sh
trunk/hc6341/: Makefile
trunk/mach-tw150v1/: mach-ap83.c
trunk/recovery.bin/: Makefile
trunk/tw150v1/: Makefile  firmware-root.sh
trunk/tw150v1/squashfs-tools/: Makefile  unsquashfs.h
wiki/: HC6361Official.wiki  HC6361Old.wiki  OnboardSwitchConfig.wiki  PageName.wiki  ProjectIntroduction.wiki  SerialFlyWires.wiki
(+34 files in other folders)
